implemting slide in for projects

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                 <a href="javascript:" id="return-to-top"><i class="fas fa-chevron-up"></i></a>
                         </div> 
                 </footer>
-            <script src="./src/nav.js"></script>
+            <script src="./script.js"></script>
     </body>
         	
 </html>
