updated styling, adjust project spacing

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                             <span class= "features-special" >websites</span> 
                                             and <span class= "features-special">applications.</span>
                                         </p>
-                                        <div class= "intro-sec1">
+                                        <div class= "intro-sec1 intro-content">
                                             Due to graduate from Coder Academy in January 2021, 
                                             I am a Full Stack Developer, who loves creativity 
                                             and problem solving with code.
