add stack on home page and moving arrow

--- a/index.html
+++ b/index.html
@@ -59,12 +59,26 @@
                                             <span class= "features-special" >websites</span> 
                                             and <span class= "features-special">applications.</span>
                                         </p>
+                                        <a class="fas fa-arrow-down more-button"></a>
                                         <div class= "intro-sec1 intro-content">
-                                            Due to graduate from Coder Academy in January 2021, 
-                                            I am a Full Stack Developer, who loves creativity 
-                                            and problem solving with code.
-
-                                        </div>
+                                            <p>  Due to graduate from Coder Academy in January 2021, 
+                                                I am a Full Stack Developer, who loves creativity 
+                                                and problem solving with code.  
+                                            </p>
+                                            <p>
+                                            My past experience partnered with my creativity and technical interests is what inspired and lead me to change careers and start my journey into Full-Stack Development.  
+                                            </p>
+                                            <p>I am enjoying the collaborative nature of tech industry and look forward to finding my first developer role once graduated from Coder Academy!</p>
+                                            <div class="stack">
+                                            <span>javaScript</span>
+                                            <span>MERN Stack</span>
+                                            <span>ruby</span>
+                                            <span>ruby on rails</span>
+                                            <span>css</span>
+                                            <span>html</span>
+                                            </div>
+                                        </div>  
+                                        
                                    </div> 
                             </section>
                 </main>
