Changed tech stack

--- a/index.html
+++ b/index.html
@@ -70,12 +70,19 @@
                                             </p>
                                             <p>I am enjoying the collaborative nature of tech industry and look forward to finding my first developer role once graduated from Coder Academy!</p>
                                             <div class="stack">
-                                            <span>javaScript</span>
-                                            <span>MERN Stack</span>
-                                            <span>ruby</span>
-                                            <span>ruby on rails</span>
-                                            <span>css</span>
-                                            <span>html</span>
+                                            <span>HTML5</span>
+                                            <span>CSS3</span>
+                                            <span>SCSS</span>
+                                            <span>Ruby</span>
+                                            <span>Rails</span>
+                                            <span>PostgreSQL</span>
+                                            <span>JavaScript ES6</span>
+                                            <span>MongoDB</span>
+                                            <span>Express JS</span>
+                                            <span>React</span>
+                                            <span>Node JS</span>
+                                            <span>jQuery</span>
+                                            <span>Pug JS</span>
                                             </div>
                                         </div>  
                                         
