added typewrite ffect

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
                             <!-- Intro  (Hello, I am Shelby) -->
                             <section class = "desktop-container">  
                                 <div class= "intro-container"> 
-                                      <div>
-                                        <h2 data-text="Hello!" class= "intro-text">Hello!</h2>
+                                     
+                                      <div class="typewriter intro-sec1">
+                                        <h1>Hello!</h1>
                                       </div>
-                                        <br>
-                                        <h1 class= "intro-sec1 hello">I'm Shelby<span class= "features-special">.</span></h1>
+                                        <h1 class= "intro-sec1 ">I'm Shelby<span class= "features-special">.</span></h1>
                                         <h3 class= "intro-sec1">Full Stack Developer</h3>
-                                    </div>
+                                </div>
                                     <div class = "intro_paragraph">
-                                        <p class= "intro-sec1 hello" >I love 
+                                        <p class= "intro-sec1 " >I love 
                                             <span class= "features-special" >coding</span> 
                                             and creating 
                                             <span class= "features-special" >websites</span> 
