styling for project single pages

--- a/src/projects/taskio.html
+++ b/src/projects/taskio.html
@@ -45,19 +45,29 @@
             <section class = "container">
                 <div class = "one-projects"> 
                     <div>
-                            <div class="project-heading">
-                                <h3 data-text="Taskio" class= "project">Taskio.<h3> 
+                            <div class="main-project-heading">
+                                <h3 class= "project-single">Taskio.<h3> 
+                                <p>Gamified Task Management</p>
                             </div>
-                            <h4>Gamified Task Management</h4>
-                            <div>
-                            <span>Deployed Site</span>
-                            <span>GitHub</span>
-                            </div>
-                
                            
-                            <img src="../imgs/archive/taskio_pc.png" width="50%" >
-                             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero doloremque a, earum, animi quas impedit itaque culpa pariatur obcaecati eos optio enim nemo in saepe aperiam omnis illo, incidunt eum?
+                            <div class="resources">
+                            <a src="#">Deployed Site</a>
+                            <a src="#">GitHub</a>
+                            </div>
+                            <ul class="tech-stack">
+                                <li>Express</li>
+                                <li>MongoDB</li>
+                                <li>Node JS</li>
+                                <li>Pug JS</li>
+                            </ul> 
+                            <img src="../imgs/archive/taskio_pc.png"  >
+                             <p class="content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero doloremque a, earum, animi quas impedit itaque culpa pariatur obcaecati eos optio enim nemo in saepe aperiam omnis illo, incidunt eum?
                              </p>
+                             <img src="../imgs/archive/taskio_pc.png"  >
+                             <p class="content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero doloremque a, earum, animi quas impedit itaque culpa pariatur obcaecati eos optio enim nemo in saepe aperiam omnis illo, incidunt eum?
+                            </p>
+                            <p class="content"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero doloremque a, earum, animi quas impedit itaque culpa pariatur obcaecati eos optio enim nemo in saepe aperiam omnis illo, incidunt eum?
+                            </p>
                     </div>                
               </div> 
              </section>
