changed the layout of project page

--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
                        <i class="fas fa-bars"></i>
                      </div>
                         <ul class="Navbar__Items ">
-                            <li class="Navbar__Link">
-                            <a class = "item item-underline" href="./index.html">about</a> 
+                            <li class="Navbar__Link hvr-fade">
+                            <a class = "item" href="./index.html">about</a> 
                             </li>
-                            <li class="Navbar__Link">
-                            <a class = "item item-underline" href="src/projects.html">projects</a>
-                            </li>
-                            </li>
-                            <li class="Navbar__Link">
-                            <a class = "item item-underline" href="https://github.com/Shelby219">github</a>
+                            <li class="Navbar__Link item-underline">
+                            <a class = "item " href="src/projects.html">projects</a>
                             </li>
                             </li>
-                            <li class="Navbar__Link">
+                            <li class="Navbar__Link item-underline">
+                            <a class = "item " href="https://github.com/Shelby219">github</a>
+                            </li>
+                            </li>
+                            <li class="Navbar__Link item-underline">
                             <a class = "item item-underline" href="https://www.linkedin.com/in/shelby-el-rassi-dev/">linkedin</a>
                             </li>         
                         </ul>
