adjusted single project files

--- a/src/projects/taskio.html
+++ b/src/projects/taskio.html
@@ -64,7 +64,8 @@
                             </ul> 
                            
                             <div class="project-content">
-                                <img src="../imgs/archive/taskio.gif"  >
+                                
+                                <img src="../imgs/archive/taskio_pc.png" >
                                 <p class="content"> 
                                 Purpose: The app is made to simplify our daily tasks schedule and build good habits. Everyday Task Tracker with a gamified twist. When the need for keeping task lists is present, with the fun of earning points is extra incentive for task completion.
                                 <br>
