Corrected project images

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
                             <li class="Navbar__Link hvr-fade">
                             <a class = "item" href="./index.html">about</a> 
                             </li>
-                            <li class="Navbar__Link item-underline">
+                            <li class="Navbar__Link hvr-fade">
                             <a class = "item " href="src/projects.html">projects</a>
                             </li>
                             </li>
-                            <li class="Navbar__Link item-underline">
+                            <li class="Navbar__Link hvr-fade">
                             <a class = "item " href="https://github.com/Shelby219">github</a>
                             </li>
                             </li>
-                            <li class="Navbar__Link item-underline">
+                            <li class="Navbar__Link hvr-fade">
                             <a class = "item item-underline" href="https://www.linkedin.com/in/shelby-el-rassi-dev/">linkedin</a>
                             </li>         
                         </ul>
