--- a/src/projects.html
+++ b/src/projects.html
@@ -22,19 +22,19 @@
                    <i class="fas fa-bars"></i>
                  </div>
                     <ul class="Navbar__Items ">
-                        <li class="Navbar__Link">
-                        <a class = "item item-underline" href="../index.html">about</a> 
+                      <li class="Navbar__Link hvr-fade">
+                        <a class = "item" href="../index.html">about</a> 
                         </li>
-                        <li class="Navbar__Link">
-                        <a class = "item item-underline" href="./projects.html">projects</a>
-                        </li>
-                        </li>
-                        <li class="Navbar__Link">
-                        <a class = "item item-underline" href="https://github.com/Shelby219">github</a>
+                        <li class="Navbar__Link hvr-fade">
+                          <a class = "item"  href="./projects.html">projects</a>
                         </li>
                         </li>
-                        <li class="Navbar__Link">
-                        <a class = "item item-underline" href="https://www.linkedin.com/in/shelby-el-rassi-dev/">linkedin</a>
+                        <li class="Navbar__Link hvr-fade">
+                        <a class = "item"  href="https://github.com/Shelby219">github</a>
+                        </li>
+                        </li>
+                        <li class="Navbar__Link hvr-fade">
+                        <a class = "item"  href="https://www.linkedin.com/in/shelby-el-rassi-dev/">linkedin</a>
                         </li>
                        
                     </ul>
