--- a/src/projects/ytc.html
+++ b/src/projects/ytc.html
@@ -71,10 +71,9 @@
                                 
                                 <img src="../imgs/archive/taskio.gif" >
                                 <p class="content"> 
-                                    Purpose: The app is made to simplify our daily tasks schedule and build good habits. Everyday Task Tracker with a gamified twist. When the need for keeping task lists is present, with the fun of earning points is extra incentive for task completion.
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolorum sit necessitatibus asperiores itaque amet nisi perspiciatis possimus beatae. Architecto recusandae asperiores reprehenderit eligendi consequatur vitae esse temporibus distinctio voluptatibus. <br>
                                     <br>
-                                    <br>
-                                    As a team we built an app whereby a user can register an account and add details and avatar. Add new tasks, edit and delete, then once marked complete points are awarded. The user dashboard is the core app interface.
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolorum sit necessitatibus asperiores itaque amet nisi perspiciatis possimus beatae. Architecto recusandae asperiores reprehenderit eligendi consequatur vitae esse temporibus distinctio voluptatibus. <br>
                                     <br>
                                     
                                     </p>
