--- a/src/projects/readme.html
+++ b/src/projects/readme.html
@@ -65,9 +65,9 @@
                            
                             <div class="project-content">
                                 
-                            <img src="../imgs/archive/taskio.gif" alt="Demo of ReadMe Article Reading Application">
+                            <img src="../imgs/readme.jpg" alt="Demo of ReadMe Article Reading Application">
                                 <p class="content"> 
-                                    My partner and I created this application as part of a JavaScript Hackathon at Coder Academy. The theme was open so we created a article reading service application with a custom web-scraper using Cheerio and Amazon Polly for the voice synthesising and URL output.  
+                                As a team we created this application as part of a JavaScript Hackathon at Coder Academy. The theme was open so we created a article reading service application with a custom web-scraper using Cheerio and Amazon Polly for the voice synthesising and URL output.  
                                 <br>
                                 <br>
                                 The purpose of the application is an instant audio listening output for news/medium/blog articles which can avoid ads, unnecessary text and it also can be used as a great accessibility tool. 
