--- a/src/projects/ytc.html
+++ b/src/projects/ytc.html
@@ -69,8 +69,8 @@
                             <div class="TLDR">TLDR;  An online thrift/pre-loved/second-hand clothing platform, enabling users to register and be able to sell their own items or purchase items from other users.</div>
                             <div class="project-content">
                                 
-                                <img src="../imgs/archive/taskio.gif" alt="Demo of Your Thrift Co Website">
-                                <p class="content"> 
+                                
+                                <img class="gif" src="../imgs/ytc.jpg" alt="Demo of Your Thrift Co Website" ><p class="content"> 
                                     With a large focus on ethical practices and sustainability in fashion, Your Thrift Co. will enable consumers another platform to buy secondhand, and sell secondhand. Reuse, reduce, recycle.
                                     <br>
                                     <br>
