--- a/src/projects/pokemon.html
+++ b/src/projects/pokemon.html
@@ -65,7 +65,7 @@
                            
                             <div class="project-content">
                                 
-                                <img src="../imgs/pokemon.png" alt="Demo of Pokemon Card Website " >
+                                <img src="../imgs/poke.jpg" alt="Demo of Pokemon Card Website " >
                                 <p class="content"> 
                                 Pokecard Generator was created to practice working with API’s and Express JS. It works as an online Pokemon Card Collector. 
                                 <br>
