update for safari issue

--- a/src/projects/pokemon.html
+++ b/src/projects/pokemon.html
@@ -64,8 +64,9 @@
                             </ul> 
                            
                             <div class="project-content">
-                                
-                                <img src="../imgs/poke.jpg" alt="Demo of Pokemon Card Website " >
+                            <div class="image">    
+                                <img src="../imgs/poke.jpg" alt="Demo of Pokemon Card Website">
+                            </div>
                                 <p class="content"> 
                                 Pokecard Generator was created to practice working with API’s and Express JS. It works as an online Pokemon Card Collector. 
                                 <br>
