--- a/src/projects/readme.html
+++ b/src/projects/readme.html
@@ -64,8 +64,9 @@
                             </ul> 
                            
                             <div class="project-content">
-                                
+                            <div class="image"> 
                             <img src="../imgs/readme.jpg" alt="Demo of ReadMe Article Reading Application">
+                           </div>
                                 <p class="content"> 
                                 As a team we created this application as part of a JavaScript Hackathon at Coder Academy. The theme was open so we created a article reading service application with a custom web-scraper using Cheerio and Amazon Polly for the voice synthesising and URL output.  
                                 <br>
