--- a/src/projects/rpsls.html
+++ b/src/projects/rpsls.html
@@ -61,8 +61,9 @@
                             </ul> 
                            
                             <div class="project-content">
-                                
-                                <img src="../imgs/rpsls.jpg"  alt="Demo of Terminal Application  ">
+                                <div class="image"> 
+                                <img src="../imgs/rpsls.jpg"  alt="Demo of Terminal Application">
+                               </div>
                                 <p class="content"> 
                                     This terminal game is a way to play the classic game of Rock Paper Scissors against the computer, but has the popular five-weapon expansion. The concept of Rock, Paper, Scissors, Spock, Lizard was invented by Sam Kass with Karen Bryla and made popular in pop culture by the Big Ban Theory! They invented this expanded version of the classic game to reduce the probability of a tie between players as there is more weapon choices.
                                     <br>
