--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
                                         </p>
                                         <a class="fas fa-arrow-down more-button"></a>
                                         <div class= "intro-sec1 intro-content">
-                                            <p>  Due to graduate from Coder Academy in January 2021, 
-                                                I am a Full Stack Developer, who loves creativity 
-                                                and problem solving with code.  
+                                            <p>  
+                                            Due to graduate from Coder Academy in January 2021, 
+                                            I am a Full Stack Developer, who loves creativity 
+                                            and problem solving with code. I enjoy clean, quality focused, responsive websites and applications. 
                                             </p>
                                             <p>
                                             My past experience partnered with my creativity and technical interests is what inspired and lead me to change careers and start my journey into Full-Stack Development.  
