updated project content

--- a/src/projects/rpsls.html
+++ b/src/projects/rpsls.html
@@ -59,7 +59,8 @@
                                 <li class="hvr-bob">Ruby</li>
                                 <li class="hvr-bob">CLI</li>    
                             </ul> 
-                           
+                            <div class="TLDR">TLDR; RPSLS is a broader version of the classic game of chance, Scissors, Paper, Rock game. User versus the Computer Terminal. </div>
+    
                             <div class="project-content">
                                 <div class="image"> 
                                 <img src="../imgs/rpsls.jpg"  alt="Demo of Terminal Application">
