--- a/src/projects/readme.html
+++ b/src/projects/readme.html
@@ -62,13 +62,14 @@
                                 <li class="hvr-bob">BootStrap</li>
                                 <li class="hvr-bob">Cheerio</li>
                             </ul> 
-                           
+                            <div class="TLDR">TLDR;  A news article reading service application with instant listening abilities and URL output.  </div>
+    
                             <div class="project-content">
                             <div class="image"> 
                             <img src="../imgs/readme.jpg" alt="Demo of ReadMe Article Reading Application">
                            </div>
                                 <p class="content"> 
-                                As a team we created this application as part of a JavaScript Hackathon at Coder Academy. The theme was open so we created a article reading service application with a custom web-scraper using Cheerio and Amazon Polly for the voice synthesising and URL output.  
+                                As a team we created this application as part of a JavaScript Hackathon at Coder Academy. The theme was open so we created an article reading service application with a custom web-scraper using Cheerio and Amazon Polly for the voice synthesising and URL output.  
                                 <br>
                                 <br>
                                 The purpose of the application is an instant audio listening output for news/medium/blog articles which can avoid ads, unnecessary text and it also can be used as a great accessibility tool. 
