--- a/src/projects/pokemon.html
+++ b/src/projects/pokemon.html
@@ -61,14 +61,22 @@
                                 <li class="hvr-bob">Pug JS</li>
                                 <li class="hvr-bob">API</li>
                             </ul> 
+                            <div class="TLDR">TLDR; Click the Pokeball to generate a random pokemon card to add to your collection!
+
+                            </div>
+    
                             <div class="project-content">
                             <div class="image">    
                                 <img src="../imgs/poke.jpg" alt="Demo of Pokemon Card Website">
                             </div>
                                 <p class="content"> 
-                                Pokecard Generator was created to practice working with API’s and Express JS. It works as an online Pokemon Card Collector. 
+                                Pokecard Generator was created to practice working with fetch and Express JS. 
                                 <br>
-                                
+                                <br>
+                                Each time the ball is clicked, data is fetched from the PokeAPI and adds a card to the screen for collection. 
+                                <br>
+                                <br>
+                                Future to do's include improve the animations, and expand the application to be a user based trading card application. 
                                 </p>
                             </div>
                     </div>                
