updated index page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                             and problem solving with code. I enjoy clean, quality focused, responsive websites and applications. 
                                             </p>
                                             <p>
-                                            My past experience partnered with my creativity and technical interests is what inspired and lead me to change careers and start my journey into Full-Stack Development.  
+                                            My past experience partnered with my creative flair and analytical nature is what inspired and lead me to change careers and begin a pathway into Full-Stack Development.  
                                             </p>
                                             <p>I am enjoying the collaborative nature of tech industry and look forward to finding my first developer role once graduated from Coder Academy!</p>
                                             <div class="stack">
