fixed font awesom eissue

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <meta name="author" content="Shelby El-rassi">
         <title>Shelby El-rassi Web Developer</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/7edf7d6684.js" crossorigin="anonymous"></script>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
         <link href="./src/styles/main.css" rel="stylesheet">
         <link rel="icon" type="image/ico" href="./src/imgs/Letter_logo.png">
-        <script src="https://kit.fontawesome.com/7edf7d6684.js" crossorigin="anonymous"></script>  <!-- SRI made my jquery not work for the return to top -->
+       
     </head>
        
     <body>
@@ -69,7 +71,9 @@
                                             <p>
                                             My past experience partnered with my creative flair and analytical nature is what inspired and lead me to change careers and begin a pathway into Full-Stack Development.  
                                             </p>
-                                            <p>I am enjoying the collaborative nature of tech industry and look forward to finding my first developer role once graduated from Coder Academy!</p>
+                                            <p>I am enjoying the collaborative nature of tech industry and look forward to finding my first developer role once graduated from Coder Academy!
+
+                                            </p>
                                             <div class="stack">
                                             <span class="hvr-bob">HTML5</span>
                                             <span class="hvr-bob">CSS3</span>
