--- a/src/projects.html
+++ b/src/projects.html
@@ -8,7 +8,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
         <link href="./styles/main.css" rel="stylesheet" >
-        <script src="https://kit.fontawesome.com/7edf7d6684.js" crossorigin="anonymous"></script>  <!-- SRI made my jquery not work for the return to top -->
+        <script src="https://kit.fontawesome.com/7edf7d6684.js" crossorigin="anonymous"></script>
     </head>
     
 <body>
