--- a/index.html
+++ b/index.html
@@ -55,39 +55,42 @@
                                         <h3 class= "intro-sec1">Full Stack Developer</h3>
                                 </div>
                                     <div class = "intro_paragraph">
-                                        <p class= "intro-sec1 " >I love 
-                                            <span class= "features-special" >coding</span> 
-                                            and creating 
-                                            <span class= "features-special" >websites</span> 
-                                            and <span class= "features-special">applications.</span>
+                                        <p class= "intro-sec1 " >I am a 
+                                            <span class= "features-special" > programmer </span> 
+                                            and
+                                            <span class= "features-special" > creator </span> 
+                                            and <span class= "features-special"> problem solver.</span>
                                         </p>
                                         <a class="fas fa-arrow-down more-button"></a>
                                         <div class= "intro-sec1 intro-content">
                                             <p>  
-                                            Due to graduate from Coder Academy in January 2021, 
-                                            I am a Full Stack Developer, who loves creativity 
-                                            and problem solving with code. I enjoy clean, quality focused, responsive websites and applications. 
+                                            A recent graduate of Coder Academy, 
+                                            I have a passion for Full-Stack Software Development
+                                            and am driven by my love of problem solving, design, research, optimisation and learning.
                                             </p>
                                             <p>
-                                            My past experience partnered with my creative flair and analytical nature is what inspired and lead me to change careers and begin a pathway into Full-Stack Development.  
+                                            My past experience coupled with my creativity and analytical thinking is what inspired me to change careers and pivot into Software Development.  
                                             </p>
-                                            <p>I am enjoying the collaborative nature of tech industry and look forward to finding my first developer role once graduated from Coder Academy!
-
+                                            <p>I enjoy creating clean, quality focused software solutions, and I can bring a critical thinking, multidisciplinary viewpoint along with curiosity and passion for bringing ideas to life. I am excited to land my first junior software developer role.
                                             </p>
                                             <div class="stack">
                                             <span class="hvr-bob">HTML5</span>
                                             <span class="hvr-bob">CSS3</span>
-                                            <span class="hvr-bob">SCSS</span>
-                                            <span class="hvr-bob">Ruby</span>
-                                            <span class="hvr-bob">Rails</span>
-                                            <span class="hvr-bob">PostgreSQL</span>
+                                            <span class="hvr-bob">SASS</span>
                                             <span class="hvr-bob">JavaScript ES6</span>
                                             <span class="hvr-bob">MongoDB</span>
                                             <span class="hvr-bob">Express JS</span>
                                             <span class="hvr-bob">React</span>
                                             <span class="hvr-bob">Node JS</span>
+                                            <span class="hvr-bob">Ruby</span>
+                                            <span class="hvr-bob">Rails</span>
+                                            <span class="hvr-bob">PostgreSQL</span>
                                             <span class="hvr-bob">jQuery</span>
                                             <span class="hvr-bob">Pug JS</span>
+                                            <span class="hvr-bob">GitHub</span>
+                                            <span class="hvr-bob">AWS</span>
+                                            <span class="hvr-bob">Bootstrap</span>
+                                            <span class="hvr-bob">Material UI</span>
                                             </div>
                                         </div>  
                                         
