added fridgemate content page and some light styling changes

--- a/src/projects/pokemon.html
+++ b/src/projects/pokemon.html
@@ -67,7 +67,7 @@
     
                             <div class="project-content">
                             <div class="image">    
-                                <img src="../imgs/poke.jpg" alt="Demo of Pokemon Card Website">
+                                <img src="../imgs/poke_pc.png" alt="Demo of Pokemon Card Website">
                             </div>
                                 <p class="content"> 
                                 Pokecard Generator was created to practice working with fetch and Express JS. 
