--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
                                         <h3 class= "intro-sec1">Full Stack Developer</h3>
                                 </div>
                                     <div class = "intro_paragraph">
-                                        <p class= "intro-sec1 " >I am a 
-                                            <span class= "features-special" > programmer </span> 
-                                            and
-                                            <span class= "features-special" > creator </span> 
-                                            and <span class= "features-special"> problem solver.</span>
+                                        <p class= "intro-sec1 " >I am passionate about
+                                            <span class= "features-special" > programming </span> ,
+                                            <span class= "features-special" > creating </span> 
+                                            and <span class= "features-special"> problem solving.</span>
                                         </p>
                                         <a class="fas fa-arrow-down more-button"></a>
                                         <div class= "intro-sec1 intro-content">
