--- a/src/projects/taskio.html
+++ b/src/projects/taskio.html
@@ -66,7 +66,7 @@
     
                             <div class="project-content">
                                 <div class="image">
-                                <img class="gif" src="../imgs/taskio.jpg" alt="Demo of Taskio Website" >
+                                <img class="gif" src="../imgs/taskio_pc.png" alt="Demo of Taskio Website" >
                                 </div>
                                 <p class="content"> 
                                 The application is was built to simplify setting daily tasks as an everyday task tracker with a gamified aspect. The the drive of earning points is extra incentive for completing tasks.
