--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                                         <h3 class= "intro-sec1">Full Stack Developer</h3>
                                 </div>
                                     <div class = "intro_paragraph">
-                                        <p class= "intro-sec1 " >I am passionate about
-                                            <span class= "features-special" > programming </span>,  
+                                        <p class= "intro-sec1 " >I love
+                                            <span class= "features-special" > coding </span>,  
                                             <span class= "features-special" > creating </span> 
                                             and <span class= "features-special"> problem solving.</span>
                                         </p>
@@ -64,13 +64,13 @@
                                         <div class= "intro-sec1 intro-content">
                                             <p>  
                                             A recent graduate of Coder Academy, 
-                                            I have a passion for Full-Stack Software Development
+                                            I have a passion for Full-Stack Development
                                             and am driven by my love of problem solving, design, research, optimisation and learning.
                                             </p>
                                             <p>
-                                            My past experience coupled with my creativity and analytical thinking is what inspired me to change careers and pivot into Software Development.  
+                                            My past experience partnered with my creativity and analytical thinking is what inspired me to change careers and pivot into Software Development.  
                                             </p>
-                                            <p>I enjoy creating clean, quality focused software solutions, and I can bring a critical thinking, multidisciplinary viewpoint along with curiosity and passion for bringing ideas to life. I am excited to land my first junior software developer role.
+                                            <p>I enjoy creating clean, quality focused code, with a passion for bringing ideas to life. 
                                             </p>
                                             <div class="stack">
                                             <span class="hvr-bob">HTML5</span>
