--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                             <p>
                                             My past experience partnered with my creativity and analytical thinking is what inspired me to change careers and pivot into Software Development.  
                                             </p>
-                                            <p>I enjoy creating clean, quality focused code, with a passion for bringing ideas to life. 
+                                            <p>I enjoy creating clean, quality focused code, and possess a passion for bringing ideas to life. 
                                             </p>
                                             <div class="stack">
                                             <span class="hvr-bob">HTML5</span>
