Update: Home page text to be relevent

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                         <h1>Hello!</h1>
                                       </div>
                                         <h1 class= "intro-sec1 ">I'm Shelby<span class= "features-special">.</span></h1>
-                                        <h3 class= "intro-sec1">Full Stack Developer</h3>
+                                        <h3 class= "intro-sec1">Software Developer</h3>
                                 </div>
                                     <div class = "intro_paragraph">
                                         <p class= "intro-sec1 " >I love
@@ -63,33 +63,26 @@
                                         <a class="fas fa-arrow-down more-button"></a>
                                         <div class= "intro-sec1 intro-content">
                                             <p>  
-                                            A recent graduate of Coder Academy, 
-                                            I have a passion for Full-Stack Development
-                                            and am driven by my love of problem solving, design, research, optimisation and learning.
+                                            Full stack developer, problem solver and creative thinker.
                                             </p>
                                             <p>
-                                            My past experience partnered with my creativity and analytical thinking is what inspired me to change careers and pivot into Software Development.  
+                                            I'm a recent Coder Academy Melbourne graduate and full-stack developer at Arcadian Digital.
                                             </p>
-                                            <p>I enjoy creating clean, quality focused code, and possess a passion for bringing ideas to life. 
+                                            <p>Currently coding with: 
                                             </p>
                                             <div class="stack">
-                                            <span class="hvr-bob">HTML5</span>
-                                            <span class="hvr-bob">CSS3</span>
-                                            <span class="hvr-bob">SASS</span>
-                                            <span class="hvr-bob">JavaScript ES6</span>
-                                            <span class="hvr-bob">MongoDB</span>
-                                            <span class="hvr-bob">Express JS</span>
-                                            <span class="hvr-bob">React</span>
-                                            <span class="hvr-bob">Node JS</span>
-                                            <span class="hvr-bob">Ruby</span>
-                                            <span class="hvr-bob">Rails</span>
+                                            <span class="hvr-bob">JavaScript</span>
+                                            <span class="hvr-bob">TypeScript</span>
+                                            <span class="hvr-bob">NodeJS</span>
+                                            <span class="hvr-bob">ReactJS</span>                           
+                                            <span class="hvr-bob">Vue</span>
+                                            <span class="hvr-bob">mySQL</span>
                                             <span class="hvr-bob">PostgreSQL</span>
-                                            <span class="hvr-bob">jQuery</span>
-                                            <span class="hvr-bob">Pug JS</span>
-                                            <span class="hvr-bob">GitHub</span>
+                                            <span class="hvr-bob">noSQL</span>
+                                            <span class="hvr-bob">LAMP stack</span>
+                                            <span class="hvr-bob">Docker</span>
                                             <span class="hvr-bob">AWS</span>
-                                            <span class="hvr-bob">Bootstrap</span>
-                                            <span class="hvr-bob">Material UI</span>
+                                            <span class="hvr-bob">GCP</span>
                                             </div>
                                         </div>  
                                         
